--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,156 @@
+p {
+  color: #ffff;
+}
+
+h3 {
+  color: #ffff;
+}
+
 .baner {
   background-color: #7C1346;
 }
 
+.banerImg {
+  width: 100%;
+  height: 30em;
+}
+
 .barra {
   background-color: #071E26;
+  height: 4em;
+}
+
+.btninicio {
+  margin-top: 0.5em;
+  margin-left: 10em;
+}
+
+.btncat {
+  margin-top: 0.5em;
+}
+
+.h2 {
+  padding-top: 5em;
+  margin-bottom: 5em;
+  margin-left: 25em;
+  color: #ffff;
 }
 
 .bg {
   background-color: #07394C;
+  padding-bottom: 2em;
+}
+
+.eve {
+  background-color: #EB639F;
+  padding: 2em;
+  margin-bottom: 3em;
+  margin-top: 3em;
+}
+
+.eve2 {
+  background-color: #6997B7;
+  padding: 2em;
+  margin-bottom: 3em;
+  margin-top: 3em;
+}
+
+.imgeve {
+  width: 20em;
+  height: 30em;
+  padding-top: 3em;
+  padding-bottom: 3em;
+}
+
+.ulhome {
+  padding-top: 3em;
+  list-style: none;
+}
+
+.footer {
+  background-color: #7C1346;
+}
+
+/* pantalla2 */
+.banerp {
+  background-color: #7C1346;
+}
+
+.imgp2 {
+  width: 25em;
+  height: 35em;
+  margin-top: 2em;
+}
+
+.buttonp2 {
+  margin-top: 2em;
+  background-color: #6997B7;
+  color: #ffff;
+}
+
+.texp2 {
+  margin-top: 2em;
+}
+
+.imgbot {
+  width: 10em;
+  height: 15em;
+  margin: 1em;
+}
+
+/*pantalla3 */
+.bgp3 {
+  padding-top: 5em;
+  height: 26em;
+}
+
+.textp3 {
+  margin-top: 1em;
+  list-style: none;
+}
+
+.cajatext {
+  margin-bottom: 1m;
+  margin-top: 1em;
+  list-style: none;
+}
+
+.buttonp3 {
+  margin-top: 5em;
+  background-color: #6997B7;
+  color: #ffff;
+}
+
+/*pantalla4*/
+.bgp4 {
+  padding-top: 5em;
+  height: 26em;
+}
+
+.buttonp4 {
+  margin-top: 5em;
+  background-color: #6997B7;
+  color: #ffff;
+}
+
+.textp4 {
+  margin-top: 1em;
+  padding-left: 4em;
+  list-style: none;
+}
+
+/*pantalla5*/
+.bgp5 {
+  padding-top: 5em;
+  height: 30em;
+}
+
+.textp5 {
+  margin-top: 1em;
+}
+
+.buttonp5 {
+  margin-top: 5em;
+  background-color: #6997B7;
+  color: #ffff;
 }
